# arm-bank-voice-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: bank_chunks.json
docker/: docker-compose.yml
scripts/: query_kb.py  scrape_sources.py
src/arm_bank_voice_agent/: build_kb.py
src/arm_bank_voice_agent/agent/: context_builder.py  guardrails.py  query_service.py
src/arm_bank_voice_agent/config/: banks.py  settings.py
src/arm_bank_voice_agent/livekit_app/: edge_tts_plugin.py  livekit_worker.py
src/arm_bank_voice_agent/llm/: groq_client.py
src/arm_bank_voice_agent/models/: chunk.py  schema.py
src/arm_bank_voice_agent/processing/: chunker.py
src/arm_bank_voice_agent/retrieval/: store.py
src/arm_bank_voice_agent/scraping/: browser_client.py  cleaner.py  extractor.py  http_client.py  pipeline.py
tests/: conftest.py  test_context_builder.py  test_query_service.py
