[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arm-bank-voice-agent"
version = "0.1.0"
description = "Armenian bank voice AI support agent using LiveKit OSS + Groq (free)"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=0.12.0",
    "livekit-plugins-groq>=0.3.0",
    "livekit-plugins-silero>=0.7.0",
    "livekit-plugins-turn-detector>=0.3.0",
    "edge-tts>=6.1.9",
    "pydub>=0.25.1",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
    "playwright>=1.45",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "groq>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
arm-bank-agent = "arm_bank_voice_agent.livekit_app.livekit_worker:main"
arm-bank-build-kb = "arm_bank_voice_agent.build_kb:main"
